--- a/English.lproj/HistoryView.xib
+++ b/English.lproj/HistoryView.xib
@@ -12,6 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="344"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -136,7 +137,7 @@
 																						<string key="NSColorName">controlBackgroundColor</string>
 																						<object class="NSColor" key="NSColor" id="423405456">
 																							<int key="NSColorSpace">3</int>
-																							<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+																							<bytes key="NSWhite">MC42NjY2NjY2ODY1AA</bytes>
 																						</object>
 																					</object>
 																					<object class="NSColor" key="NSTextColor" id="490767243">
@@ -329,7 +330,6 @@
 																</object>
 																<string key="NSFrame">{{0, 17}, {822, 195}}</string>
 																<reference key="NSSuperview" ref="292847127"/>
-																<reference key="NSNextKeyView" ref="208783626"/>
 																<reference key="NSDocView" ref="208783626"/>
 																<reference key="NSBGColor" ref="840114878"/>
 																<int key="NScvFlags">4</int>
@@ -362,7 +362,6 @@
 																</object>
 																<string key="NSFrameSize">{822, 17}</string>
 																<reference key="NSSuperview" ref="292847127"/>
-																<reference key="NSNextKeyView" ref="698297642"/>
 																<reference key="NSDocView" ref="698297642"/>
 																<reference key="NSBGColor" ref="840114878"/>
 																<int key="NScvFlags">4</int>
@@ -371,7 +370,6 @@
 														</object>
 														<string key="NSFrameSize">{822, 212}</string>
 														<reference key="NSSuperview" ref="670181251"/>
-														<reference key="NSNextKeyView" ref="972658302"/>
 														<int key="NSsFlags">560</int>
 														<reference key="NSVScroller" ref="680234071"/>
 														<reference key="NSHScroller" ref="1071048392"/>
@@ -838,7 +836,6 @@
 																</object>
 																<string key="NSFrameSize">{823, 177}</string>
 																<reference key="NSSuperview" ref="493621790"/>
-																<reference key="NSNextKeyView" ref="423346033"/>
 																<reference key="NSDocView" ref="423346033"/>
 																<reference key="NSBGColor" ref="641341480"/>
 																<object class="NSCursor" key="NSCursor">
@@ -870,7 +867,6 @@
 														</object>
 														<string key="NSFrameSize">{823, 177}</string>
 														<reference key="NSSuperview" ref="63506813"/>
-														<reference key="NSNextKeyView" ref="386087576"/>
 														<int key="NSsFlags">528</int>
 														<reference key="NSVScroller" ref="1073725335"/>
 														<reference key="NSHScroller" ref="702109276"/>
@@ -1097,7 +1093,6 @@
 																</object>
 																<string key="NSFrame">{{1, 17}, {680, 155}}</string>
 																<reference key="NSSuperview" ref="726205574"/>
-																<reference key="NSNextKeyView" ref="609977039"/>
 																<reference key="NSDocView" ref="609977039"/>
 																<reference key="NSBGColor" ref="840114878"/>
 																<int key="NScvFlags">4</int>
@@ -1130,7 +1125,6 @@
 																</object>
 																<string key="NSFrame">{{1, 0}, {680, 17}}</string>
 																<reference key="NSSuperview" ref="726205574"/>
-																<reference key="NSNextKeyView" ref="124553584"/>
 																<reference key="NSDocView" ref="124553584"/>
 																<reference key="NSBGColor" ref="840114878"/>
 																<int key="NScvFlags">4</int>
@@ -1139,7 +1133,6 @@
 														</object>
 														<string key="NSFrame">{{-1, -1}, {682, 173}}</string>
 														<reference key="NSSuperview" ref="1022120577"/>
-														<reference key="NSNextKeyView" ref="776908956"/>
 														<int key="NSsFlags">562</int>
 														<reference key="NSVScroller" ref="888298782"/>
 														<reference key="NSHScroller" ref="258795551"/>
@@ -1553,14 +1546,6 @@
 					<object class="NSMenuItem" id="747438026">
 						<reference key="NSMenu" ref="886653824"/>
 						<string key="NSTitle">Diff All Files to Revision</string>
-						<string key="NSKeyEquiv"/>
-						<int key="NSMnemonicLoc">2147483647</int>
-						<reference key="NSOnImage" ref="591860921"/>
-						<reference key="NSMixedImage" ref="550118683"/>
-					</object>
-					<object class="NSMenuItem" id="421984087">
-						<reference key="NSMenu" ref="886653824"/>
-						<string key="NSTitle">Revert All Files to Revision</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
 						<reference key="NSOnImage" ref="591860921"/>
@@ -2068,14 +2053,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
-						<string key="label">historyMenuRevertAllToChosenRevision:</string>
-						<reference key="source" ref="945562250"/>
-						<reference key="destination" ref="421984087"/>
-					</object>
-					<int key="connectionID">992</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
 						<string key="label">historyMenuUpdateRepositoryToChosenRevision:</string>
 						<reference key="source" ref="945562250"/>
 						<reference key="destination" ref="267544846"/>
@@ -2225,7 +2202,6 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="134642559"/>
-							<reference ref="421984087"/>
 							<reference ref="267544846"/>
 							<reference ref="747438026"/>
 							<reference ref="64259375"/>
@@ -2247,11 +2223,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">345</int>
 						<reference key="object" ref="134642559"/>
-						<reference key="parent" ref="886653824"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">346</int>
-						<reference key="object" ref="421984087"/>
 						<reference key="parent" ref="886653824"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -3011,7 +2982,6 @@
 					<string>344.IBEditorWindowLastContentRect</string>
 					<string>344.IBPluginDependency</string>
 					<string>345.IBPluginDependency</string>
-					<string>346.IBPluginDependency</string>
 					<string>347.IBPluginDependency</string>
 					<string>348.IBPluginDependency</string>
 					<string>384.IBPluginDependency</string>
@@ -3126,8 +3096,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{472, 710}, {256, 293}}</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>{{472, 730}, {256, 273}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3273,20 +3242,30 @@
 							<string>historyMenuDiffAllToChosenRevision:</string>
 							<string>historyMenuManifestOfChosenRevision:</string>
 							<string>historyMenuMergeRevision:</string>
-							<string>historyMenuRevertAllToChosenRevision:</string>
 							<string>historyMenuUpdateRepositoryToChosenRevision:</string>
 							<string>historyMenuViewRevisionDifferences:</string>
 							<string>labelsMenuMoveChosenLabel:</string>
 							<string>labelsMenuRemoveChosenLabel:</string>
 							<string>labelsMenuUpdateRepositoryToChosenRevision:</string>
 							<string>mainMenuCollapseChangesets:</string>
+							<string>mainMenuCommitAllFiles:</string>
+							<string>mainMenuDiffAllFiles:</string>
 							<string>mainMenuHistoryEditChangesets:</string>
 							<string>mainMenuRebaseChangesets:</string>
+							<string>mainMenuRevertAllFiles:</string>
 							<string>mainMenuStripChangesets:</string>
 							<string>refreshHistoryView:</string>
+							<string>toolbarCommitFiles:</string>
+							<string>toolbarDiffFiles:</string>
+							<string>toolbarRevertFiles:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -3327,6 +3306,18 @@
 							<string>LabelsTableView</string>
 						</object>
 					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="179443479">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/HistoryView/HistoryViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HistoryView</string>
+					<string key="superclassName">NSView</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">historyMenuRevertAllToChosenRevision:</string>
+						<string key="NS.object.0">id</string>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
@@ -3339,6 +3330,11 @@
 						<string key="NS.key.0">theHistoryView</string>
 						<string key="NS.object.0">HistoryView</string>
 					</object>
+					<reference key="sourceIdentifier" ref="179443479"/>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HistoryViewController</string>
+					<string key="superclassName">NSViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
@@ -3360,9 +3356,9 @@
 							<string>NSView</string>
 						</object>
 					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="227766352">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="243314443">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/HistoryPane/JHAccordionView.h</string>
+						<string key="minorKey">Classes/HistoryView/JHAccordionView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -3391,7 +3387,7 @@
 							<string>JHAccordionSubView</string>
 						</object>
 					</object>
-					<reference key="sourceIdentifier" ref="227766352"/>
+					<reference key="sourceIdentifier" ref="243314443"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">JHAccordionView</string>
@@ -3531,25 +3527,10 @@
 							<string>actionSwitchViewToDifferencesView:</string>
 							<string>actionSwitchViewToHistoryView:</string>
 							<string>actionTestListingItem:</string>
-							<string>browserMenuOpenSelectedFilesInFinder:</string>
-							<string>browserMenuOpenTerminalHere:</string>
-							<string>browserMenuRevealSelectedFilesInFinder:</string>
 							<string>mainMenuAddAndCloneServerRepositoryRef:</string>
 							<string>mainMenuAddLabelToCurrentRevision:</string>
-							<string>mainMenuAddRenameRemoveAllFiles:</string>
-							<string>mainMenuAddRenameRemoveSelectedFiles:</string>
-							<string>mainMenuAddSelectedFiles:</string>
-							<string>mainMenuAnnotateSelectedFiles:</string>
 							<string>mainMenuCloneRepository:</string>
-							<string>mainMenuCollapseChangesets:</string>
-							<string>mainMenuCommitAllFiles:</string>
-							<string>mainMenuCommitSelectedFiles:</string>
-							<string>mainMenuDeleteSelectedFiles:</string>
-							<string>mainMenuDiffAllFiles:</string>
-							<string>mainMenuDiffSelectedFiles:</string>
 							<string>mainMenuExportPatches:</string>
-							<string>mainMenuHistoryEditChangesets:</string>
-							<string>mainMenuIgnoreSelectedFiles:</string>
 							<string>mainMenuImportPatches:</string>
 							<string>mainMenuIncomingFromRepository:</string>
 							<string>mainMenuManifestOfCurrentVersion:</string>
@@ -3560,17 +3541,8 @@
 							<string>mainMenuOutgoingToRepository:</string>
 							<string>mainMenuPullFromRepository:</string>
 							<string>mainMenuPushToRepository:</string>
-							<string>mainMenuRebaseChangesets:</string>
 							<string>mainMenuRemergeSelectedFiles:</string>
-							<string>mainMenuRenameSelectedFile:</string>
-							<string>mainMenuRevertAllFiles:</string>
-							<string>mainMenuRevertAllFilesToVersion:</string>
-							<string>mainMenuRevertSelectedFiles:</string>
-							<string>mainMenuRevertSelectedFilesToVersion:</string>
 							<string>mainMenuRollbackCommit:</string>
-							<string>mainMenuStripChangesets:</string>
-							<string>mainMenuUnignoreSelectedFiles:</string>
-							<string>mainMenuUntrackSelectedFiles:</string>
 							<string>mainMenuUpdateRepository:</string>
 							<string>mainMenuUpdateRepositoryToVersion:</string>
 							<string>refreshBrowserContent:</string>
@@ -3584,40 +3556,10 @@
 							<string>sidebarMenuRemoveSidebarItem:</string>
 							<string>sidebarMenuRevealRepositoryInFinder:</string>
 							<string>testBrowserLoad:</string>
-							<string>toolbarAddRenameRemoveFiles:</string>
-							<string>toolbarCommitFiles:</string>
-							<string>toolbarDiffFiles:</string>
 							<string>toolbarUpdate:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
