--- a/English.lproj/HistoryView.xib
+++ b/English.lproj/HistoryView.xib
@@ -12,8 +12,8 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="344"/>
 			<integer value="584"/>
+			<integer value="344"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -377,7 +377,6 @@
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{1, 313}, {849, 15}}</string>
 																<reference key="NSSuperview" ref="292847127"/>
-																<bool key="NSEnabled">YES</bool>
 																<int key="NSsFlags">1</int>
 																<reference key="NSTarget" ref="292847127"/>
 																<string key="NSAction">_doScroller:</string>
@@ -402,7 +401,7 @@
 														<string key="NSFrameSize">{822, 212}</string>
 														<reference key="NSSuperview" ref="670181251"/>
 														<reference key="NSNextKeyView" ref="972658302"/>
-														<int key="NSsFlags">688</int>
+														<int key="NSsFlags">560</int>
 														<reference key="NSVScroller" ref="680234071"/>
 														<reference key="NSHScroller" ref="1071048392"/>
 														<reference key="NSContentView" ref="972658302"/>
@@ -1706,6 +1705,14 @@
 						<reference key="NSOnImage" ref="591860921"/>
 						<reference key="NSMixedImage" ref="550118683"/>
 					</object>
+					<object class="NSMenuItem" id="523666229">
+						<reference key="NSMenu" ref="886653824"/>
+						<string key="NSTitle">Backout Changeset…</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="591860921"/>
+						<reference key="NSMixedImage" ref="550118683"/>
+					</object>
 					<object class="NSMenuItem" id="833267092">
 						<reference key="NSMenu" ref="886653824"/>
 						<bool key="NSIsDisabled">YES</bool>
@@ -2274,6 +2281,14 @@
 					</object>
 					<int key="connectionID">1016</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">mainMenuBackoutChangeset:</string>
+						<reference key="source" ref="1003"/>
+						<reference key="destination" ref="523666229"/>
+					</object>
+					<int key="connectionID">1021</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -2327,6 +2342,7 @@
 							<reference ref="482568947"/>
 							<reference ref="338504833"/>
 							<reference ref="233744336"/>
+							<reference ref="523666229"/>
 						</object>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">HistoryContextMenu</string>
@@ -3127,6 +3143,11 @@
 						<reference key="object" ref="691673734"/>
 						<reference key="parent" ref="673533284"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1019</int>
+						<reference key="object" ref="523666229"/>
+						<reference key="parent" ref="886653824"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -3142,6 +3163,7 @@
 					<string>1013.IBViewBoundsToFrameTransform</string>
 					<string>1014.IBPluginDependency</string>
 					<string>1018.CustomClassName</string>
+					<string>1019.IBPluginDependency</string>
 					<string>145.IBPluginDependency</string>
 					<string>344.IBEditorWindowLastContentRect</string>
 					<string>344.IBPluginDependency</string>
@@ -3284,7 +3306,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>LogTableTextFieldCell</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{472, 730}, {256, 273}}</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>{{472, 710}, {256, 293}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3437,7 +3460,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">1018</int>
+			<int key="maxID">1021</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
